[package]
name = "bless_you_bot"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = "Discord bot"
readme = "README.md"
homepage = "https://github.com/celeo/bless_you_bot"
repository = "https://github.com/celeo/bless_you_bot"
license = "MIT OR Apache-2.0"
exclude = [
  ".github",
  ".env",
  "bless_you_bot.service"
]
keywords = []
categories = []

[dependencies]
dotenv = "0.15.0"
log = "0.4.11"
once_cell = "1.4.1"
pretty_env_logger = "0.4.0"
regex = "1.4.2"
serenity = { version = "0.9.0", default-features = false, features = ["builder", "client", "gateway", "http", "model", "utils", "rustls_backend"] }
tokio = { version = "0.2", features = ["full"] }
